apps/mended-drum/tools/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mended-drum-tools-cloudflare
  namespace: mended-drum
spec:
  ingressClassName: cloudflare
  rules:
    - host: drum-tools.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: mended-drum-tools
                port:
                  number: 8080
            path: /
            pathType: Prefix
